# git_intro

./: README.md  classes.py  pyproject.toml  test.py
.github/workflows/: flake8.yml  lint-flake8-action.yml  lint-ruff-action.yml  ruff-action.yml
src/: test.py
